syntax = "proto3";

package auth;
option go_package = "proto/auth";

message CredentialsRequest {
      string email = 1;
      string password = 2;
    }
    message AccountRegistrationRequest {
      string username = 1;
      string password = 2;
      string name = 3;
      string surname = 4;
      string bio = 5;
      string pictureBase64 = 6;
      string moto = 7;
      string email = 8;
      string role = 9;
    }
    message AuthenticationTokenResponse {
      string accessToken = 1;
      int64 id = 2;
    }
    message TokenResponse {
        bool isValid = 1;
        string role = 2;
        int64 userId = 3;
        int64 personId = 4;
    }
    message EmptyMessage{

    }
service AuthService {
    rpc GetToken (EmptyMessage) returns (TokenResponse);
    rpc Login(CredentialsRequest) returns (AuthenticationTokenResponse);
    rpc Register(AccountRegistrationRequest) returns (AuthenticationTokenResponse);

}
